# deepburn

./: .gitignore  LICENSE  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
deepburn/: CRAM.py  __init__.py  burnup_problem.py  isotope.py
deepburn/CRAM/: CaratheodoryFejer.py  ChebRatExp.py
examples/: Burnup_Problem.ipynb  CRAM.ipynb  CRAM_CF_GeneratorMP.ipynb  CRAM_ODEsolve.ipynb  CRAM_error.ipynb  Isotope.ipynb
examples/.ipynb_checkpoints/: CRAM-checkpoint.ipynb
src/tools/: isotope.py  tools.py
tests/: __init__.py  test_isotope.py
tests/CRAM/: test_CRA.py  test_CRAsolve.py  test_ChebRatExp.py
tests/tools/: test_burnup_problem.py  test_isotope.py
