[metadata]
name = DeepBurn
version = 0.1.0
license = MIT
description = "Tools to test isotopic burnup solvers"
long_description = file: README.rst
author = Gert Van den Eynde
author_email = gvdeynde@sckcen.be
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires=
   gmpy2
   mpmath
   numpy
   scipy
   matplotlib

[options.packages.find]
where=src
